Changelog
=========

2.3.2 (unreleased)
------------------

- Nothing changed yet.


2.3.1 (2018-11-01)
------------------

- Fix reindexObjectSecurity patch to account for special handling of system
  roles in allowedRolesAndUsers indexer.
  [lgraf]


2.3.0 (2018-10-18)
------------------

- Patch reindexObjectSecurity to optimize indexing of large trees.
  [lgraf]

- Fix diff for items with a modification date that has no fractional seconds.
  [buchi]

- Provide an error message when raising an AttributeError in SolrDocument.
  [buchi]


2.2.0 (2018-09-21)
------------------

- Add option to synchronize Solr with catalog in maintenance view.
  [buchi]


2.1.2 (2018-05-15)
------------------

- Set Content-Type 'application/x-www-form-urlencoded' for requests to
  /update/extract endpoint to ensure compatibility with Solr 7.3.
  [lgraf]

- Maintenance view: Allow reindexing without dooming the transaction.
  [lgraf]


2.1.1 (2018-02-20)
------------------

- Make sure we do not pass invalid dates to Solr.
  [buchi]


2.1.0 (2018-02-20)
------------------

- Declare dependency on plone.namedfile[blobs].
  [lgraf]

- Add diff function to maintenance view to compare UIDs in portal catalog with
  UIDs in Solr.
  [buchi]

- Fix security filter: Properly quote roles/users with spaces.
  [buchi]

- Add option to reindex Solr from a catalog query.
  [buchi]


2.0.0 (2018-02-15)
------------------

- Complete rewrite. Not compatible with previous versions.
  [buchi]