@@ -4,7 +4,8 @@ Changelog
 2.3.2 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Fix partial reindexing (atomic updates) for fields without a value.
+  [buchi]
 
 
 2.3.1 (2018-11-01)
